# countdown

./: CMakeLists.txt  Main.qml  README.md  SettingsPopup.qml  SettingsView.qml  applogic.cpp  applogic.h  main.cpp  translations_en_US.ts  translations_fi_FI.ts
